# tmus

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  auto-imports.d.ts  components.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish-to-auto-release.yml
.trae/: mcp.json
spec/: communicate.md  i18n.md  spec.md
spec/feature/: category.md  feature.md  statistic.md
spec/naming/: tree.md
spec/tool/: serde.md
src/: App.vue  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/app/: analyze.rs  api.rs  config.rs  constant.rs  exit.rs  file_version.rs  focus_log.rs  global.rs  macro.rs  mcp.rs  mcp_service.rs  mod.rs  monitor.rs  setup.rs  singleton.rs  timer.rs  tray.rs  update.rs  window.rs
src-tauri/src/app/data/: focus_record.rs  mod.rs  tick.rs  tmus_tick.rs
src-tauri/src/app/file/: analyze.rs  core.rs  file_app.rs  file_index.rs  file_record.rs  mod.rs  time.rs
src-tauri/src/app/persist/: analyze.rs  core.rs  file_app.rs  file_index.rs  file_record.rs  mod.rs  read.rs
src-tauri/src/cmd/: app_detail.rs  app_duration_area.rs  category.rs  duration.rs  duration_calculate_helper.rs  duration_statistic.rs  file_detail.rs  file_version.rs  mod.rs  read.rs  read_helper.rs  scheme.rs  statistic.rs
src-tauri/src/cmd/data/: file_detail.rs  mod.rs
src-tauri/src/config/: config.rs  config_loader.rs  i18n.rs  loader.rs  mod.rs  radix.rs  rule.rs  tag.rs
src-tauri/src/engine/: auto_mmap.rs  config.rs  core.rs  engine.rs  file_app.rs  file_index.rs  file_record.rs  focus_record.rs  interface.rs  meta.rs  millisecond.rs  mod.rs  monitor.rs  pigeon_engine.rs  type.rs
src-tauri/src/engine/alpha/: engine.rs  file_app.rs  file_record.rs  focus_app.rs  focus_index.rs  focus_record.rs  mod.rs
src-tauri/src/engine/data/: cursor_position.rs  engine_error.rs  engine_state.rs  focus_event.rs  focus_record.rs  millisecond.rs  mod.rs  optimize_storage_config.rs  optimize_storage_option.rs  read_direction.rs  records_query.rs
src-tauri/src/engine/models/: focus_record.rs  millisecond.rs  mod.rs
src-tauri/src/engine/tracking/: focus_app.rs  focus_index.rs  focus_record.rs  mod.rs
src-tauri/src/mcp/: server.rs  service.rs
src-tauri/src/state/: category.rs  config.rs  i18n.rs  mod.rs  radix.rs  rule.rs  scheme.rs
src-tauri/src/util/: explorer.rs  extract_icon.rs  file_version.rs  force_singleton.rs  get_file_version.rs  icon.rs  json.rs  locale.rs  mod.rs  show_in_folder.rs  str_util.rs  test_util.rs  time_util.rs
src-tauri/windows/: hooks.nsi
src/components/: AppBasicCard.vue  AppCard.vue  AppCardGroup.vue  DayOfWeekChart.vue  GeneralCard.vue  HeatCalendar.vue  HeatCalendarCell.vue  MenuItem.vue  OverviewCard.vue  PageHome.vue  PageTimeline.vue  TabBar.vue  TimelineItem.vue  TitleBar.vue  WeeklyChart.vue
src/components/category/: AddCategoryDialog.vue  AppList.vue  CategoryTree.vue
src/components/chart/: BarChart.vue  DodgeBarChart.vue  PieChart.vue  ProgressChart.vue  RhythmPolarChart.vue  RhythmRadarChart.vue  WeeklyChart.vue  WeeklyPolar.vue
src/components/common/: AppIcon.vue  FileSelector.vue
src/components/global/: ContentView.vue  ContentViewScrollbar.vue  UpdateDialog.vue
src/components/selector/: DateTimePicker.vue
src/components/setting/: McpSettingItem.vue  RuleDialog.vue  SettingGroup.vue  SettingItem.vue  SettingMoreItem.vue  TagDialog.vue  UpdateSettingItem.vue
src/components/statistic/: AppCard.vue  AppCardGroup.vue  AppDaysStat.vue  AppDurationStat.vue  AppProgress.vue  AppProgressGroup.vue  AppProgressGroupV2.vue  AppProgressV2.vue  CategoryDaysStat.vue  CategoryDurationStat.vue  CategoryRhythmStat.vue  HeatCalendar.vue  HeatCalendarCell.vue  StatisticBasicSelector.vue  WeeklyChart.vue  WeeklyPolar.vue
src/global/: api.ts  cmd.ts  command.ts  data.ts  db.ts  i18n.ts  route.ts  state.ts  time-util.ts
src/pages/: Application.vue  Category.vue  Detail.vue  Home.vue  Overview.vue  Setting.vue  Statistic.vue  Timeline.vue
src/script/: api.ts  cmd.ts  data.ts  db.ts  event.ts  i18n.ts  models.ts  route.ts  state.ts  time-util.ts  util.ts
tmus-engine/: Cargo.toml
tmus-engine/src/: async_runtime.rs  auto_mmap.rs  config.rs  core.rs  lib.rs  meta.rs  monitor.rs  util.rs
tmus-engine/src/models/: focus_record.rs  mod.rs
tmus-engine/src/storage/: focus_app.rs  focus_index.rs  focus_record.rs  mod.rs
tmus-engine/src/tracker/: mod.rs  schedule.rs
tmus-engine/src/tracker/window/: mod.rs  monitor.rs
tmus-engine/src/tracking/: focus_index.rs  focus_record.rs  mod.rs
