[package]
name = "tmus"
version = "0.2.3"
description = "tmus"
authors = ["saicem"]
repository = "https://github.com/saicem/tmus.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
windows = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_Security"] }
log = "0.4"
dirs-next = "2.0.0"
image = "0.25"
base64 = "0.22"
itertools = "0.14"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
thiserror = "2.0"
url = "2.5.4"
winreg = "0.55.0"
tmus-engine = { path = "../tmus-engine" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
