[package]
name = "tmus"
version = "0.3.4"
description = "tmus"
authors = ["saicem"]
repository = "https://github.com/saicem/tmus.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["tray-icon"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem", "Win32_Security", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_Globalization"] }
dirs-next = "2.0.0"
image = "0.25.9"
base64 = "0.22.1"
itertools = "0.14.0"
tauri-plugin-shell = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.4.2"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0"
url = "2.5.4"
winreg = "0.55.0"
tmus-engine = { path = "../tmus-engine" }
axum = "0.8"
rmcp = { version = "0.6.4", features = ["server", "transport-sse-server"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
tokio-util = "0.7.15"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
