[package]
name = "tmus-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61", features = [
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
memmap2 = "0.9.5"
