[package]
name = "tmus-engine"
version = "0.1.1"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
memmap2 = "0.9"
